Fixed footer on Mobile to Call option

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -159,6 +159,22 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 
+.site-footer {
+        background: #f1f1f1;
+        bottom: 0;
+        position: fixed;
+        width: 100%;
+        padding: 10px;
+        z-index: 9999;
+        font-size: 18px;
+        border-top: 1px solid #e0e0e0;    
+            }
+
+.site-footer span{
+    color: #444;
+    
+}
+
 /*
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
